[GP] Alpha artifact & inconsistent scaling using stroke texture. #86968

Closed
opened 2021-03-26 19:06:06 +01:00 by adam · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 750/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab

Short description of error

  • In Grease Pencil, for closed shapes, when using a texture on the stroke (Mode Type: Line), the texture only between vertex 0 (end) and 1 (start) produce gray alpha artifacts in the render, and the texture has inconsistent scaling compared to rest of stroke.
  • Toggling Caps covers over it, but you can still see the issue behind the caps.

Exact steps for others to reproduce the error

  • Drag out circle (or any closed shape) with fill & stroke on.
  • Apply brush texture to stroke. UV Factor: 400

GP-01vertex texture.blend
GP-00vertex scale.jpg
GP-00vertex alpha artifact.jpg
ink-noise.png

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 750/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab` **Short description of error** - In Grease Pencil, for closed shapes, when using a texture on the stroke (Mode Type: Line), the texture only between vertex 0 (end) and 1 (start) produce gray alpha artifacts in the render, and the texture has inconsistent scaling compared to rest of stroke. - Toggling Caps covers over it, but you can still see the issue behind the caps. **Exact steps for others to reproduce the error** - Drag out circle (or any closed shape) with fill & stroke on. - Apply brush texture to stroke. UV Factor: 400 [GP-01vertex texture.blend](https://archive.blender.org/developer/F9910891/GP-01vertex_texture.blend) ![GP-00vertex scale.jpg](https://archive.blender.org/developer/F9910893/GP-00vertex_scale.jpg) ![GP-00vertex alpha artifact.jpg](https://archive.blender.org/developer/F9910895/GP-00vertex_alpha_artifact.jpg) ![ink-noise.png](https://archive.blender.org/developer/F9910897/ink-noise.png)
Author

Added subscriber: @adm

Added subscriber: @adm
Contributor

Added subscriber: @dupoxy

Added subscriber: @dupoxy
Contributor

I can confirm the issue in latest master with cyclical stroke and texture.
I could test as far as 2.80 and this is also an issue there.

I can confirm the issue in latest master with cyclical stroke and texture. I could test as far as 2.80 and this is also an issue there.
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Falk David self-assigned this 2021-03-29 12:44:03 +02:00
Member

I can confirm this on the latest 2.93.0 Alpha, branch: master, commit date: 2021-03-29 07:25, hash: b9734f7716.

I can confirm this on the latest 2.93.0 Alpha, branch: master, commit date: 2021-03-29 07:25, hash: `b9734f7716`.

This issue was referenced by 183e3f6bb9

This issue was referenced by 183e3f6bb93e97a281a9bb2baf168631163577d0
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86968
No description provided.